Fix pulsing animation on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -202,10 +202,21 @@ All colors MUST be HSL.
   
   @keyframes qr-logo-pulse {
     0%, 100% { 
-      transform: scale(1); 
+      transform: scale(0.9); 
     }
     50% { 
-      transform: scale(0.88); 
+      transform: scale(0.65); 
+    }
+  }
+  
+  @-webkit-keyframes qr-logo-pulse {
+    0%, 100% { 
+      -webkit-transform: scale(0.9); 
+      transform: scale(0.9); 
+    }
+    50% { 
+      -webkit-transform: scale(0.65); 
+      transform: scale(0.65); 
     }
   }
   
